[gd_scene load_steps=8 format=3 uid="uid://ctbtax71vfdgw"]

[ext_resource type="Script" uid="uid://bt51tox2i3u40" path="res://addons/album_manager/scripts/song_panel.gd" id="1_e4sxf"]
[ext_resource type="Script" uid="uid://b2xaeyoncaaeo" path="res://addons/album_manager/extend_resource/song_data.gd" id="2_7n476"]
[ext_resource type="Texture2D" uid="uid://b4ofwu2057ghe" path="res://addons_examples/album_manager/cover_images/catto.jpg" id="3_lh6dj"]
[ext_resource type="Texture2D" uid="uid://jg6ex33p0gvp" path="res://addons/album_manager/icons/Remove.svg" id="4_7n476"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_5vtob"]
bg_color = Color(0.129412, 0.14902, 0.180392, 1)
corner_radius_top_left = 10
corner_radius_top_right = 10
corner_radius_bottom_right = 10
corner_radius_bottom_left = 10

[sub_resource type="Resource" id="Resource_5e6gc"]
script = ExtResource("2_7n476")
song_cover = ExtResource("3_lh6dj")
song_title = "Lagusihlagu"
song_path = "placeholder"
chart_path = "placeholder"
metadata/_custom_type_script = "uid://b2xaeyoncaaeo"

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_lrshs"]
bg_color = Color(0.211765, 0.239216, 0.290196, 1)
border_width_left = 5
border_color = Color(0.129412, 0.14902, 0.180392, 1)
corner_radius_top_left = 5

[node name="SongPanel" type="PanelContainer" groups=["songpanel"]]
custom_minimum_size = Vector2(270, 150)
theme_override_styles/panel = SubResource("StyleBoxFlat_5vtob")
script = ExtResource("1_e4sxf")
song_data = SubResource("Resource_5e6gc")

[node name="PanelUIHbox" type="HBoxContainer" parent="."]
layout_mode = 2

[node name="PanelUIVbox" type="VBoxContainer" parent="PanelUIHbox"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3

[node name="Spacer" type="Control" parent="PanelUIHbox/PanelUIVbox"]
custom_minimum_size = Vector2(0, 5)
layout_mode = 2

[node name="HBoxContainer" type="HBoxContainer" parent="PanelUIHbox/PanelUIVbox"]
layout_mode = 2

[node name="SongTitleLabel" type="Label" parent="PanelUIHbox/PanelUIVbox/HBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
theme_override_styles/normal = SubResource("StyleBoxFlat_lrshs")
text = "Song 001"
horizontal_alignment = 1
vertical_alignment = 1

[node name="RemoveBtn" type="Button" parent="PanelUIHbox/PanelUIVbox/HBoxContainer"]
layout_mode = 2
icon = ExtResource("4_7n476")

[node name="InspectorBelowHere" type="Node" parent="PanelUIHbox/PanelUIVbox"]
unique_name_in_owner = true

[node name="Spacer2" type="Control" parent="PanelUIHbox/PanelUIVbox"]
custom_minimum_size = Vector2(0, 5)
layout_mode = 2

[node name="Spacer" type="Control" parent="PanelUIHbox"]
custom_minimum_size = Vector2(5, 0)
layout_mode = 2

[connection signal="pressed" from="PanelUIHbox/PanelUIVbox/HBoxContainer/RemoveBtn" to="." method="_on_remove_btn_pressed"]
